--- a/styles/main.css
+++ b/styles/main.css
@@ -29,5 +29,55 @@
         letter-spacing: .012em;
         font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     }
-    #botonComprar{
+    .boton1{
+        background-color: #0071e3;
+        min-width: 30px;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 7px;
+        padding-bottom: 7px;
+        border-radius: 980px;
+    }
+    .botontext1{
+        color: white;
+        text-decoration: none;
+        font-size: 14px;
+        line-height: 1.4289;
+        font-weight: 400;
+        letter-spacing: -.016em;
+        font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+        padding-top: 5px;
+    }
+    .botones{
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .boton2{
+        background-color: #0071e3;
+                --sk-button-margin-horizontal: 14px;
+        --sk-button-margin-vertical: 14px;
+        min-width: 30px;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 7px;
+        padding-bottom: 7px;
+        border-radius: 980px;
+        border: solid #0071e3 1px;
+        background-color: black;
+    }
+
+    .botontext2{
+        color: #0071e3;
+        text-decoration: none;
+         font-size: 14px;
+        line-height: 1.4289;
+        font-weight: 400;
+        letter-spacing: -.016em;
+        font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+        padding-top: 5px;
+    }
+    .textComprar{
+        text-decoration: none;
     }
