--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,7 +3,12 @@
   color: rgb(138, 128, 128);
   line-height: 1.5;
 }
-
+footer {
+  clear: both;
+  margin-top: 40px;
+  position: relative;
+  z-index: 10;
+}
 .ajuste {
   max-width: 1000px;
   margin: 0 auto;
